--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -3,7 +3,18 @@ DESCRIPCION DE LOS ESTILOS QUE SE APLICARAN
 count the number of ID selectors in the selector (= a)
 count the number of class selectors, attributes selectors, and pseudo-classes in the selector (= b)
 count the number of type selectors and pseudo-elements in the selector (= c)
+
+SOLO SE PERMITE GRID multicol Y flexvox
+
+ej para hacer una estructura con grid con una plantilla para la pagina
+body
+display:grid;
+grid-template-area: 'header header header','menu right right','menu footer footer footer';
+en las secciones llamar: header{grid-area:header}
+
+para quitar bloques anonimos div, elementos con clas habra que embolsarlos en otro elemento section, body etc
 */
+
 /* a=0 b=0 c=1 -> specificity =   1 */
 body {
     padding:0;
@@ -17,7 +28,7 @@ body {
 body > section {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 65% 35%;
 }
 /* a=0 b=1 c=3 -> specificity =   13*/
 body > section > section:nth-child(1) {
@@ -41,6 +52,7 @@ header
     display: grid;
     margin: 0;
     background-color: rgb(11, 66, 184);
+    color: black;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 header h1
@@ -54,19 +66,21 @@ header nav
 {
     text-align: center;
     background-color: rgb(0, 128, 233);
+    color: black;
     grid-row: 2;
     display: inline-block;
 }
+
 /* a=0 b=0 c=2 -> specificity =   2*/
 nav a{
     display: inline-block;
-    text-decoration:none;
+    text-decoration:underline;
     padding: 1vh 2.5vw;
     background-color: rgb(129, 177, 254);
     color:black;
     justify-content: center;
-    margin: 1vh 0;
-    border-radius: 15px;
+    margin: 1vh 1vw;
+    border-radius: 1em;
 }
 /* a=0 b=1 c=2 -> specificity =   12 */
 nav a:hover{
@@ -84,25 +98,36 @@ section p
 {
     margin: 1em;
     padding: 0.5em;
-    background-color: rgb(29, 94, 214);
+    color: #FFFFFF;
+    background-color: #0C2F6E;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 section h2
 {
     margin: 1em;
     padding: 0.4em;
+    color: black;
     background-color: rgb(31, 122, 138);
 }
+
+/* a=0 b=0 c=1 -> specificity =   1 */
+a
+{
+    color: #FFFFFF;
+    background-color: #1101F4;
+}
+
 /* a=0 b=0 c=2 -> specificity =   2*/
-section video {
+/*section video {
     grid-row: 1;
     grid-column: 2 / 3;
     margin: auto;
     display: flex;
-}
+}*/
 
-/* a=0 b=0 c=0 -> specificity =   0 */
+/* a=0 b=0 c=1 -> specificity =   1 */
 footer
 {
+    color: black;
     background-color: blueviolet;
 }
