--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -27,23 +27,23 @@ body {
 /* a=0 b=0 c=2 -> specificity =   2*/
 body > section {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 1em;
     grid-template-columns: 65% 35%;
 }
 /* a=0 b=1 c=3 -> specificity =   13*/
-body > section > section:nth-child(1) {
+/*body > section > section:nth-child(1) {
     grid-column: 1;
     grid-row: 1;
-}
+}*/
 /* a=0 b=1 c=3 -> specificity =   13*/
 body > section > section:nth-child(2){
-    grid-column: 1;
+    /*grid-column: 1;*/
     grid-row: 2;
 }
 /* a=0 b=1 c=3 -> specificity =   13*/
 body > section > section:nth-child(3){
     grid-column: 2;
-    grid-row: 1;
+    /*grid-row: 1;*/
 }
 
 /* a=0 b=0 c=1 -> specificity =   1 */
