--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -21,7 +21,7 @@ body {
     margin :0;
     color: rgb(0, 0, 0);
     background-color: rgb(99, 178, 192);
-    font-family: 'Times New Roman', Times,serif;
+    font-family: 'Times New Roman', Times,serif, 'Comic Sans';
     font-size: 1em;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
@@ -45,7 +45,6 @@ body > section > section:nth-child(3){
     grid-column: 2;
     /*grid-row: 1;*/
 }
-
 /* a=0 b=0 c=1 -> specificity =   1 */
 header
 {   
@@ -58,10 +57,17 @@ header
 header h1
 {   
     color: #FFF370;
+    background-color: rgb(11, 66, 184);
     text-align: center;
     grid-row: 1;
 }
-
+/* a=0 b=0 c=1 -> specificity =   1 */
+dl{
+    background-color: #0C2F6E;
+    color: white;
+    margin: 1vh 1vw;
+    padding: 1em;
+}
 /* a=0 b=0 c=2 -> specificity =   2 */
 header nav 
 {
@@ -71,7 +77,6 @@ header nav
     grid-row: 2;
     display: inline-block;
 }
-
 /* a=0 b=0 c=2 -> specificity =   2*/
 nav a{
     display: inline-block;
@@ -88,7 +93,7 @@ nav a:hover{
     background-color: rgb(28, 148, 152);
     color:black;
 }
-
+/* a=0 b=0 c=2 -> specificity =   2 */
 section section{
     border-style: double;
     border-width: 0.3em;
@@ -110,7 +115,41 @@ section h2
     color: black;
     background-color: rgb(31, 122, 138);
 }
-
+/* a=0 b=0 c=1 -> specificity =   1 */
+table{
+    text-align: center;
+    border-style: groove;
+    margin: 1em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+th,td{
+    margin: 0em;
+    border-style: solid;
+    border-width: 0.15em;
+    color: white;
+    padding: 0.25em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+th{
+    background-color: #0C2F6E;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+td{
+    background-color: rgb(11, 66, 184);
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+caption{
+    font-size: 1.2em;
+    font-weight: bold;
+}
+/* a=0 b=0 c=3 -> specificity =   3 */
+section h2 > table
+{
+    margin: 1em;
+    padding: 0.4em;
+    color: black;
+    background-color: rgb(31, 122, 138);
+}
 /* a=0 b=0 c=1 -> specificity =   1 */
 a
 {
@@ -125,6 +164,11 @@ a
     margin: auto;
     display: flex;
 }*/
+/* a=0 b=0 c=2 -> specificity =   2*/
+section form{
+    margin: 1em;
+}
+
 
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer
