--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -25,7 +25,7 @@ body {
     font-size: 1em;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
-body > section {
+body > main {
     display: grid;
     grid-gap: 1em;
     grid-template-columns: 65% 35%;
@@ -36,13 +36,14 @@ body > section {
     grid-row: 1;
 }*/
 /* a=0 b=1 c=3 -> specificity =   13*/
-body > section > section:nth-child(2){
+body > main > section:nth-child(2){
     /*grid-column: 1;*/
     grid-row: 2;
 }
 /* a=0 b=1 c=3 -> specificity =   13*/
-body > section > section:nth-child(3){
+body > main > aside{
     grid-column: 2;
+    margin: 1em;
     /*grid-row: 1;*/
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
@@ -94,7 +95,7 @@ nav a:hover{
     color:black;
 }
 /* a=0 b=0 c=2 -> specificity =   2 */
-section section{
+main section{
     border-style: double;
     border-width: 0.3em;
     margin: 1em;
@@ -175,4 +176,8 @@ footer
 {
     color: black;
     background-color: blueviolet;
+}
+video{
+    width: 100%;
+    height: 100%;
 }
