--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -57,8 +57,8 @@ header
 /* a=0 b=0 c=2 -> specificity =   2*/
 header h1
 {   
-    color: #FFF370;
-    background-color: rgb(11, 66, 184);
+    color: #FFDD4D;
+    background-color: #0E54EB;
     text-align: center;
     grid-row: 1;
 }
