--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -83,8 +83,8 @@ nav a{
     display: inline-block;
     text-decoration:underline;
     padding: 1vh 2.5vw;
-    background-color: #FDFDFD;
-    color:#1D79C4;
+    background-color: #217F90;
+    color:#000000;
     justify-content: center;
     margin: 1vh 1vw;
     border-radius: 1em;
