--- a/estilo/trabajo.css
+++ b/estilo/trabajo.css
@@ -91,8 +91,8 @@ nav a{
 }
 /* a=0 b=1 c=2 -> specificity =   12 */
 nav a:hover{
-    background-color: rgb(28, 148, 152);
-    color:black;
+    background-color: #55BEFF;
+    color:#474747;
 }
 /* a=0 b=0 c=2 -> specificity =   2 */
 main section{
