--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -39,7 +39,7 @@ header
 header h1
 {   
     color: #FFDD4D;
-    background-color: #0E54EB;
+   /* background-color: #0E54EB;*/
     text-align: center;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
@@ -54,7 +54,6 @@ header nav
 {
     text-align: center;
     background-color: rgb(0, 128, 233);
-    color: black;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 nav a{
@@ -85,6 +84,21 @@ section p
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 section h2
+{
+    color: #F3F3F3;
+    background-color: #1F7A8A;
+    margin: 1em;
+    padding: 0.4em;
+}
+article p
+{
+    color: #FFFFFF;
+    background-color: #0C2F6E;
+    margin: 1em;
+    padding: 0.5em;
+}
+/* a=0 b=0 c=2 -> specificity =   2*/
+article h2
 {
     color: #F3F3F3;
     background-color: #1F7A8A;
@@ -137,6 +151,11 @@ footer
 {
     color: black;
     background-color: blueviolet;
+    margin: 1em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+img{
+    margin: 1em;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 video{
@@ -144,6 +163,6 @@ video{
     height: 100%;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
-section form{
+article form{
     margin: 1em;
 }
