--- a/estilo/layout.css
+++ b/estilo/layout.css
@@ -15,9 +15,17 @@ en las secciones llamar: header{grid-area:header}
 para quitar bloques anonimos div, elementos con clas habra que embolsarlos en otro elemento section, body etc
 */
 
+/* a=0 b=0 c=1 -> specificity =   1 */
+body{
+    display: grid;
+    grid-gap: 1em;
+}
 /* a=0 b=0 c=2 -> specificity =   2*/
 body > main {
+    
     display: grid;
+    grid-auto-columns: auto;
+    grid-auto-rows: auto;
     grid-gap: 1em;
     grid-template-columns: 65% 35%;
 }
@@ -26,7 +34,9 @@ body > main > section:nth-child(2){
     grid-row: 2;
 }
 /* a=0 b=1 c=3 -> specificity =   13*/
-body > main > aside{
+body > main > section:nth-child(3){
+    min-width: 10em;
+    max-height: 12em;
     grid-column: 2;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
@@ -43,11 +53,21 @@ header h1
 header nav 
 {
     grid-row: 2;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 nav a{
-    display: inline-block;
     justify-content: center;
     border-radius: 1em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+form{
+    column-count:1;
+    column-gap: 1em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+footer{
+    grid-row-end: auto;
 }
