--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -31,7 +31,7 @@ body > main > aside{
 /* a=0 b=0 c=1 -> specificity =   1 */
 header
 {   
-    background-color: rgb(11, 66, 184);
+    background-color: #3D3D3D;
     color: black;
     margin: 0;
 }
@@ -39,12 +39,12 @@ header
 header h1
 {   
     color: #FFDD4D;
-    background-color: rgb(11, 66, 184);
+    background-color: #3D3D3D;
     text-align: center;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 dt{
-    text-decoration: underline;
+    text-decoration: underline  ;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 dl{
@@ -154,7 +154,7 @@ a
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer
 {
-    color: black;
+    color: #B8B8FF;
     background-color: blueviolet;
     margin: 1em;
 }
