--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -149,7 +149,7 @@ section h2 > table
 a
 {
     color: #FFFFFF;
-    background-color: #1101F4;
+    /*background-color: #1101F4;*/
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer
