--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -49,7 +49,7 @@ dt{
 /* a=0 b=0 c=1 -> specificity =   1 */
 dl{
     background-color: #00ADB5;
-    color: #EEEEEE;
+    color: black;
     margin: 1vh 1vw;
     padding: 1em;
 }
@@ -97,7 +97,7 @@ section h2
 }
 article p
 {
-    color: #EEEEEE;
+    color: black;
     background-color: #00ADB5;
     margin: 1em;
     padding: 0.5em;
@@ -116,11 +116,18 @@ table{
     border-style: groove;
     margin: 1em;
 }
-/* a=0 b=0 c=1 -> specificity =   1 */
-th,td{
+th{
     border-style: solid;
     border-width: 0.15em;
     color: white;
+    margin: 0em;
+    padding: 0.25em;
+}
+/* a=0 b=0 c=1 -> specificity =   1 */
+td{
+    border-style: solid;
+    border-width: 0.15em;
+    color: black;
     margin: 0em;
     padding: 0.25em;
 }
@@ -148,13 +155,13 @@ section h2 > table
 /* a=0 b=0 c=1 -> specificity =   1 */
 a
 {
-    color: #EEEEEE;
+    color: black;
     /*background-color: #1101F4;*/
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer
 {
-    color: white;
+    color: black;
     background-color: #00ADB5;
     margin: 1em;
 }
