--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -133,7 +133,7 @@ td{
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 th{
-    background-color: #0C2F6E;
+    background-color: #393E46;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 td{
