--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -41,10 +41,12 @@ header h1
     color: #EEEEEE;
     background-color: #222831;
     text-align: center;
+    font-size: 2.5em;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 dt{
     text-decoration: underline  ;
+    font-size: 1.2em;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 dl{
@@ -52,6 +54,7 @@ dl{
     color: black;
     margin: 1vh 1vw;
     padding: 1em;
+    font-size: 1em;
 }
 /* a=0 b=0 c=2 -> specificity =   2 */
 header nav 
@@ -65,7 +68,7 @@ nav a{
     text-decoration:underline;
     background-color: #393E46;
     color:#EEEEEE;
-    margin: 1vh 1vw;
+    margin: 1vh 2vw;
     padding: 1vh 2.5vw;
 }
 /* a=0 b=1 c=2 -> specificity =   12 */
@@ -78,37 +81,41 @@ main section{
     border-style: double;
     border-width: 0.3em;
     margin: 1em;
+    background-color: #00ADB5;
 }
 /* a=0 b=0 c=2 -> specificity =   2 */
 section p
 {
+    
     color: black;
     background-color: #00ADB5;
-    margin: 1em;
+    margin: 0;
     padding: 0.5em;
+    font-size: 1.1em;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 section h2
 {
     color: #EEEEEE;
     background-color: #393E46;
-    margin: 1em;
+    margin: 0em;
     padding: 0.4em;
 }
 article p
 {
     color: black;
     background-color: #00ADB5;
-    margin: 1em;
-    padding: 0.5em;
+    margin: 0em;
+    padding: 0.7em;
+    font-size: 1.1em;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 article h2
 {
     color: #EEEEEE;
     background-color: #393E46;
-    margin: 1em;
-    padding: 0.4em;
+    margin: 0em;
+    padding: 0.7em;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 table{
