--- a/estilo/layout.css
+++ b/estilo/layout.css
@@ -19,6 +19,7 @@ para quitar bloques anonimos div, elementos con clas habra que embolsarlos en ot
 body{
     display: grid;
     grid-gap: 1em;
+    grid-template-rows: auto 1fr auto;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 body > main {
@@ -68,5 +69,9 @@ form{
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 11em;
     grid-row-end: auto;
 }
