--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -61,7 +61,7 @@ header nav
 {
     text-align: center;
     background-color: #393E46;
-    /*color: #E8FF38;*/
+    color: white;
 }
 /* a=0 b=0 c=2 -> specificity =   2*/
 nav a{
@@ -82,6 +82,7 @@ main section{
     border-width: 0.3em;
     margin: 1em;
     background-color: #00ADB5;
+    color: black;
 }
 /* a=0 b=0 c=2 -> specificity =   2 */
 section p
@@ -163,7 +164,7 @@ section h2 > table
 a
 {
     color: black;
-    /*background-color: #1101F4;*/
+    background-color: #00ADB5;
 }
 /* a=0 b=0 c=1 -> specificity =   1 */
 footer
