--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -97,7 +97,7 @@ section p
 section h2
 {
     color: #EEEEEE;
-    background-color: #222831;
+    background-color: #0F1115;
     margin: 0em;
     padding: 0.4em;
 }
@@ -113,7 +113,7 @@ article p
 article h2
 {
     color: #EEEEEE;
-    background-color: #222831;
+    background-color: #0F1115;
     margin: 0em;
     padding: 0.7em;
 }
