--- a/Ejercicio-12/Ejercicio12.css
+++ b/Ejercicio-12/Ejercicio12.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     margin: 0;
     background-color: rgb(237, 165, 87);
+    color: black;
 }
 /*001*/
 h1 {
@@ -25,7 +26,6 @@ h3 {
 /*001*/
 p{
     font-size : 1.2em;
-    text-align: justify;
     text-align: center;
 }
 /*001*/
@@ -38,6 +38,7 @@ main{
 /*001*/
 section{
     background-color: rgb(209 232 184);
+    color: black;
     padding: 2vw 5vw;
     margin: 10vh;
     border-radius: 10px;
